Feature:  Start text robots.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kauã Steliano' <stelianok@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "algorithmia": "^0.3.10",
+    "readline-sync": "^1.4.10",
+    "sbd": "^1.0.19"
   }
 }
